2011-01-13   Jeremy Cribb <jcribb@email.unc.edu>
	* sim_boltzmann_solid.m: added. simulates a bead "diffusing" in a solid material with defined modulus.

2010-09-01   Jeremy Cribb <jcribb@email.unc.edu>
	* sim_newt_fluid.m:  added "numpaths" option to simulate more than one path at a time.  Added 'seed' parameter for random number generator so that paths could be replicated, if desired.

2009-10-15  Jeremy Cribb <jcribb@email.unc.edu>
	* sim_newt_fluid.m: added "numpaths" option to simulate more than one path at a time.

2009-09-28  Jeremy Cribb <jcribb@email.unc.edu>
	* rpoly (folder).  added.

2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* sphere_flow.m: complete rework of this function.  has two modes.  will give you the shear around a sphere at a given angle and radius from the sphere.  will also generate a few eye-candy figures with vector fields and particle streams, etc.

2008-10-27  Kris Ford <krisford@email.unc.edu>
	* .cvsignore added

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* Changelog.txt: updated for last commit (forgot to save beforehand).

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	* sphere_flow.m: clearer code.  Added quiver plot to convey full vector rather than just magnitude.  perhaps streamlines later.

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* sim_newt_fluid.m: added.  simulates Newtonian fluid random walk in any dimension.
	* sim_newt_fluid_1D.m: removed.
	* sim_newt_fluid_2D.m: removed.
	* sim_newt_fluid_3D.m: removed.

2006-03-27  Jeremy Cribb <jcribb@email.unc.edu>
	* modeling_msd_dep_on_Temp_time.m:  added.  Models the dependence of the mean square displacement of sucrose solutions as a function of sucrose concentration, solution temperature, and observation time.

2006-01-30  Jeremy Cribb <jcribb@email.unc.edu>
	* ramp_response_Kelvin_Voight.m: added.  Script (for now) that simulates the response of a Kelvin-Voight fluid to a ramp input.

2005-12-08  Jeremy Cribb <jcribb@email.unc.edu>